Add validated names from external linked accounts